// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parsing error messages from ocaml compiler multi error messages 1`] = `
Array [
  Array [
    Array [
      "Warning 11: this match case is unused.",
      Array [
        Array [
          4,
          2,
        ],
        Array [
          4,
          5,
        ],
      ],
    ],
  ],
  Array [
    Array [
      "Error: Syntax error",
      Array [
        Array [
          2,
          0,
        ],
        Array [
          2,
          3,
        ],
      ],
    ],
  ],
  Array [
    Array [
      "Error: Unbound value pi",
      Array [
        Array [
          2,
          15,
        ],
        Array [
          2,
          17,
        ],
      ],
    ],
  ],
  Array [
    Array [
      "Error: Unbound value random_gaussian",
      Array [
        Array [
          2,
          2,
        ],
        Array [
          2,
          17,
        ],
      ],
    ],
  ],
]
`;

exports[`parsing error messages from ocaml compiler single error message 1`] = `
Array [
  Array [
    Array [
      "Warning 11: this match case is unused.",
      Array [
        Array [
          4,
          2,
        ],
        Array [
          4,
          5,
        ],
      ],
    ],
  ],
]
`;
